<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C697C3FA"
    tools:context=".Calculadora_Horario">

    <EditText
        android:id="@+id/id_horario_entrada"
        android:layout_width="283dp"
        android:layout_height="61dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:hint="@string/txt_horario_inicio"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="#795548"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_titulo" />

    <Button
        android:id="@+id/idCalcular"
        android:layout_width="170dp"
        android:layout_height="67dp"
        android:layout_below="@id/id_horario_entrada"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="calcularHorarioSaida"
        android:text="@string/txt_calcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idResultado2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/idResultado2"
        android:layout_width="239dp"
        android:layout_height="59dp"
        android:layout_below="@id/idCalcular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_horario_entrada" />

    <TextView
        android:id="@+id/id_titulo"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>